<resources>
    <string name="app_name">FOODUCA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lista_comida">ListaComidaActivity</string>
    <string name="nombre">Nombre</string>
    <string name="precio_0_00"> </string>
    <string name="redesSociales">Redes Sociales</string>
    <string name="nombre_comida">Nombre_Comida</string>
    <string name="lugar_comida">Lugar_Comida</string>
    <string name="precio_comida">Precio_Comida</string>
    <string name="correo">fooduca.soporte@gmail.com</string>
    <string name="precio_m_nimo">Precio mínimo:</string>
    <string name="costo_m_nimo_a_gastar">Costo mínimo a gastar</string>
    <string name="precio_m_ximo">Precio máximo:</string>
    <string name="costo_m_ximo_a_gastar">Costo máximo a gastar</string>
    <string name="bbbusquedas">Bienvenido a búsqueda por precio, por favor ingresa el precio mínimo y máximo que estas dispuesto a gastar</string>
    <string name="platillos_probar">Aun tienes muchos platillos por probar</string>
    <string name="te_vas">¿Te vas tan pronto?</string>
    <string name="volver">VOLVER</string>
    <string name="salir">SALIR</string>
    <string name="conoce">^  Pulsa aquí para conocer más</string>
    <string name="redirige">Redirigiendo a instagram de</string>
    <string name="no_ig">no posee ig</string>
    <string name="no_fb">no posee fb</string>
    <string name="redirigiendo_pag">Redirigiendo a pagina de</string>
    <string name="incluye_te">*Todos los platillos incluyen te*</string>
    <string name="buscar">buscar</string>
    <string name="encuentrame">Encuentráme en:</string>
    <string name="pronto">Pronto…</string>
    <string name="atrevete_a_probarlo">Atrevete a probarlo</string>

</resources>
