<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lupa"
    >
    <TextView
        android:id="@+id/pm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio_m_nimo"
        android:textSize="@dimen/standard_23"
        android:layout_marginTop="@dimen/dp70"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/precio_min"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/pm"
        android:layout_width="wrap_content"
        android:hint="@string/costo_m_nimo_a_gastar"
        android:layout_height="wrap_content"
        android:inputType="number"/>
    <TextView
        android:id="@+id/pmm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio_m_ximo"
        android:layout_marginTop="@dimen/dp150"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/standard_23"
        android:textAlignment="center"/>
    <EditText
        android:layout_marginTop="@dimen/dp180"
        android:id="@+id/precio_max"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/costo_m_ximo_a_gastar"
        />
    <Button
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp230"
        android:layout_marginLeft="@dimen/dp155"
        android:text="@string/buscar"
        android:textAlignment="center" />
    <TextView
        android:layout_marginVertical="@dimen/dp300"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:textAlignment="center"
        android:textSize="@dimen/standard_23"
        android:text="@string/bbbusquedas"/>

</RelativeLayout>