<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragmentos.RecomendacionFragment"
    android:background="@drawable/holi"
    android:layout_margin="@dimen/dp4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/recomDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recomendacion del dia"
        android:textSize="@dimen/sp30"
        android:textColor="@color/negro"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/recomen_comida_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/comida"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/recomDia"
        android:layout_margin="@dimen/dp8"/>

    <TextView
        android:id="@+id/txt_nombre_comida"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_comida"
        android:textSize="@dimen/sp20"
        android:textColor="@color/negro"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/recomen_comida_img"
        android:layout_margin="@dimen/dp8"/>

    <TextView
        android:id="@+id/txt_nombre_restaurante"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lugar_comida"
        android:textSize="@dimen/sp20"
        android:textColor="@color/negro"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txt_nombre_comida"
        android:layout_margin="@dimen/dp8"/>

    <TextView
        android:id="@+id/txt_precio"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/precio_comida"
        android:textSize="@dimen/sp20"
        android:textColor="@color/negro"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txt_nombre_restaurante"
        android:layout_margin="@dimen/dp8"/>

</RelativeLayout>
</ScrollView>